- Added Spawn Position for when the players leave or gets kicked from islands. - Added a way to remove islands when the team is removed/disbanded (not working yet) - Added Visit, AllowVisit, Leave, Disband commands. - Added permission check for Admin commands. - When first creating the world, add a 3x3 spawn platform for safety. - Added Additional Structure support for specific islands. - Added an algorithm to check for islands in layers from spawn, this makes sure it doesnt create an island if there is or used to be an island there.