@@ -18,7 +18,6 @@ import net.minecraft.nbt.NbtIo;
 import net.minecraft.network.chat.ClickEvent;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.HoverEvent;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.tags.BlockTags;
@@ -31,7 +30,6 @@ import net.minecraft.world.phys.Vec2;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 
 public class SkyblockUtils
@@ -40,34 +38,75 @@ public class SkyblockUtils
     {
         StructureTemplate template;
 
-        if (HavenConfig.SkyblockIsland == null)
+        File structureFile = new File("config/HavenSkyblockBuilder/Templates", islandTemplate + ".nbt");
+        File parentDirectory = structureFile.getParentFile();
+        Path structurePath = parentDirectory.toPath().resolve(structureFile.getName());
+
+        try
         {
-            template = level.getStructureManager().getOrCreate(ResourceLocation.parse(HavenSkyblockBuilder.MOD_ID + ":" + islandTemplate));
-        }
-        else
+            CompoundTag nbtData = NbtIo.readCompressed(structurePath, NbtAccounter.unlimitedHeap());
+
+            template = new StructureTemplate();
+            HolderGetter<Block> blockRegistry = level.registryAccess().registryOrThrow(Registries.BLOCK).asLookup();
+            template.load(blockRegistry, nbtData);
+
+            StructurePlaceSettings settings = new StructurePlaceSettings();
+            template.placeInWorld(level, position, position, settings, null, 3);
+            spawnAdditionalStructures(level, position, islandTemplate);
+        } catch (Exception e)
         {
-            File structureFile = new File("config/HavenSkyblockBuilder/Templates", islandTemplate + ".nbt");
-            File parentDirectory = structureFile.getParentFile();
-            Path structurePath = parentDirectory.toPath().resolve(structureFile.getName());
-
-            try
-            {
-                CompoundTag nbtData = NbtIo.readCompressed(structurePath, NbtAccounter.unlimitedHeap());
-
-                template = new StructureTemplate();
-                HolderGetter<Block> blockRegistry = level.registryAccess().registryOrThrow(Registries.BLOCK).asLookup();
-                template.load(blockRegistry, nbtData);
-
-                StructurePlaceSettings settings = new StructurePlaceSettings();
-                template.placeInWorld(level, position, position, settings, null, 3);
-            } catch (Exception e)
-            {
-                HavenSkyblockBuilder.Log("Error loading custom structure: " + e.getMessage());
-                throw new RuntimeException("Failed to load structure from custom path: " + structurePath, e);
-            }
+            HavenSkyblockBuilder.Log("Error loading custom structure: " + e.getMessage());
+            throw new RuntimeException("Failed to load structure from custom path: " + structurePath, e);
         }
 
         return template;
+    }
+
+    private static void spawnAdditionalStructures(ServerLevel level, BlockPos position, String islandTemplate) {
+        List<? extends String> additionalStructures = HavenConfig.additionalStructures;
+        if (additionalStructures != null) {
+            for (String entry : additionalStructures) {
+                String[] parts = entry.split("=");
+                if (parts.length != 2 || !parts[0].equals(islandTemplate)) {
+                    continue;
+                }
+
+                String[] structureParts = parts[1].split(",");
+                if (structureParts.length != 4) {
+                    HavenSkyblockBuilder.Log("Invalid structure entry: " + entry);
+                    continue;
+                }
+
+                String structureName = structureParts[0];
+                int xOffset, yOffset, zOffset;
+                try {
+                    xOffset = Integer.parseInt(structureParts[1]);
+                    yOffset = Integer.parseInt(structureParts[2]);
+                    zOffset = Integer.parseInt(structureParts[3]);
+                } catch (NumberFormatException e) {
+                    HavenSkyblockBuilder.Log("Invalid offsets in structure entry: " + entry);
+                    continue;
+                }
+
+                BlockPos structurePosition = position.offset(xOffset, yOffset, zOffset);
+
+                try {
+                    Path structurePath = Path.of("config/HavenSkyblockBuilder/AdditionalIslands", structureName + ".nbt");
+                    CompoundTag nbtData = NbtIo.readCompressed(structurePath, NbtAccounter.unlimitedHeap());
+
+                    StructureTemplate template = new StructureTemplate();
+                    HolderGetter<Block> blockRegistry = level.registryAccess().registryOrThrow(Registries.BLOCK).asLookup();
+                    template.load(blockRegistry, nbtData);
+
+                    StructurePlaceSettings settings = new StructurePlaceSettings();
+                    template.placeInWorld(level, structurePosition, structurePosition, settings, null, 3);
+                } catch (Exception e) {
+                    HavenSkyblockBuilder.Log("Error loading additional structure '" + structureName + "': " + e.getMessage());
+                    throw new RuntimeException("Failed to load additional structure from path: " + structureName, e);
+                }
+
+            }
+        }
     }
 
     private static BlockPos findNearestValidBlock(ServerLevel level, BlockPos basePos)
@@ -120,7 +159,7 @@ public class SkyblockUtils
         int centerZ = basePos.getZ() + size.getZ() / 2;
 
         // Parse offset from config
-        int[] offset = parseSpawnOffset(offsetList);
+        int[] offset = parseConfigPosition(offsetList);
         int offsetX = offset[0];
         int offsetY = offset[1];
         int offsetZ = offset[2];
@@ -157,7 +196,7 @@ public class SkyblockUtils
                 blockState.is(BlockTags.LEAVES));
     }
 
-    public static int[] parseSpawnOffset(List<? extends String> offset)
+    public static int[] parseConfigPosition(List<? extends String> offset)
     {
         if (offset.size() != 3)
         {
@@ -178,6 +217,7 @@ public class SkyblockUtils
     public static int createTeam(CommandContext<CommandSourceStack> context) throws CommandSyntaxException
     {
         ServerPlayer player = context.getSource().getPlayerOrException();
+        ServerLevel level = context.getSource().getLevel();
         String teamName = context.getArgument("name", String.class);
         String islandTemplate = context.getArgument("template", String.class);
 
@@ -194,8 +234,7 @@ public class SkyblockUtils
         }
 
         // Determine the next available island position
-        int islandOffset = HavenConfig.islandDistance;
-        BlockPos basePosition = TeamManager.findNextAvailableIslandPosition(islandOffset);
+        BlockPos basePosition = TeamManager.findNextAvailableIslandPosition(level);
 
         if (basePosition == null)
         {
@@ -204,19 +243,19 @@ public class SkyblockUtils
         }
 
         // Create the island
-        ServerLevel level = context.getSource().getLevel();
         StructureTemplate template = SkyblockUtils.spawnStructure(level, basePosition, islandTemplate);
 
         // Determine the initial spawn position
         BlockPos spawnPosition = SkyblockUtils.determineSpawnPosition(level, template, basePosition, new ArrayList<>(HavenConfig.SpawnOffset));
 
         // Create the team and set the home position
-        Team team = new Team(teamName, player.getUUID(), spawnPosition);
+        Team team = new Team(teamName, player.getUUID(), true, spawnPosition, new Vec2(player.getYRot(), player.getXRot()));
         team.addMember(player.getUUID(), player.getName().getString());
         TeamManager.addTeam(level.getServer(), team);
 
         // Teleport the player to the initial spawn position
-        player.teleportTo(level, spawnPosition.getX() + 0.5, spawnPosition.getY(), spawnPosition.getZ() + 0.5, player.getYRot(), player.getXRot());
+        player.teleportTo(level, spawnPosition.getX() + 0.5, spawnPosition.getY() + 1, spawnPosition.getZ() + 0.5, 0, 0);
+        player.resetFallDistance();
         player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.creation_success", teamName));
 
         return 1;
@@ -244,14 +283,20 @@ public class SkyblockUtils
 
         if (team.getMembers().isEmpty())
         {
+            /*if (team.getHomePosition() != null)
+            {
+                IslandDeleter.deleteIslandArea(level, team.getHomePosition());
+            }*/
             TeamManager.removeTeam(level.getServer(), team.getUuid());
             context.getSource().sendSuccess(() -> Component.translatable("haven_skyblock_builder.team.disband_success", team.getName()), true);
+            int[] spawn = parseConfigPosition(HavenConfig.spawnPosition);
+            player.teleportTo(level, spawn[0], spawn[1], spawn[2], 0, 0);
         }
         else
         {
             if (team.getLeader().equals(player.getUUID()))
             {
-                team.setLeader(team.getMembers().get(0).getUuid());
+                team.setLeader(team.getMembers().getFirst().getUuid());
                 ServerPlayer newLeader = level.getServer().getPlayerList().getPlayer(team.getLeader());
                 if (newLeader != null)
                     newLeader.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.new_leader", team.getName()));
@@ -261,35 +306,41 @@ public class SkyblockUtils
         return 1;
     }
 
-    public static int disbandTeam(CommandContext<CommandSourceStack> context) throws CommandSyntaxException
-    {
+    public static int disbandTeam(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
         ServerLevel level = context.getSource().getLevel();
         ServerPlayer player = context.getSource().getPlayerOrException();
         Optional<Team> optionalTeam = TeamManager.getAllTeams().stream()
                 .filter(team -> team.getLeader().equals(player.getUUID()))
                 .findFirst();
 
-        if (optionalTeam.isEmpty())
-        {
+        if (optionalTeam.isEmpty()) {
             player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.not_leader"));
             return 0;
         }
 
         Team team = optionalTeam.get();
-        team.getMembers().forEach(member ->
-        {
+        BlockPos homePosition = team.getHomePosition();
+
+        List<Team.Member> members = new ArrayList<>(team.getMembers());
+        for (Team.Member member : members) {
             ServerPlayer memberPlayer = level.getServer().getPlayerList().getPlayer(member.getUuid());
-            if (memberPlayer != null && memberPlayer != player)
-            {
-                // Convert BlockPos to Double for getSharedSpawnPos
-                BlockPos spawnPos = level.getSharedSpawnPos();
-                memberPlayer.teleportTo(spawnPos.getX() + 0.5, spawnPos.getY(), spawnPos.getZ() + 0.5);
-                team.removeMember(member.getUuid());
-                memberPlayer.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.disband_leave", team.getMember(player.getUUID())));
+            if (memberPlayer != null) {
+                try {
+                    int[] spawn = parseConfigPosition(HavenConfig.spawnPosition);
+                    HavenSkyblockBuilder.Log("Teleporting " + memberPlayer.getName().getString() + " to " + spawn[0] + ", " + spawn[1] + ", " + spawn[2]);
+                    memberPlayer.teleportTo(level, spawn[0] + 0.5, spawn[1], spawn[2] + 0.5, 0, 0);
+                    memberPlayer.resetFallDistance();
+                    team.removeMember(member.getUuid());
+                    memberPlayer.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.disband_leave", team.getName()));
+                } catch (Exception e) {
+                    HavenSkyblockBuilder.Log("Error disbanding team: " + e.getMessage());
+                }
             }
-        });
+        }
+
         TeamManager.removeTeam(level.getServer(), team.getUuid());
         context.getSource().sendSuccess(() -> Component.translatable("haven_skyblock_builder.team.disband_success", team.getName()), true);
+        //IslandDeleter.deleteIslandArea(level, homePosition);
         return 1;
     }
 
@@ -316,8 +367,8 @@ public class SkyblockUtils
             return 0;
         }
 
-        player.teleportTo(home.getX() + 0.5, home.getY() + 1, home.getZ() + 0.5);
-        player.absRotateTo(homeRotation.y, homeRotation.x);
+        player.teleportTo(context.getSource().getLevel(), home.getX() + 0.5, home.getY() + 1, home.getZ() + 0.5, homeRotation.y, homeRotation.x);
+        player.resetFallDistance();
         player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.home_teleport"));
         return 1;
     }
@@ -343,6 +394,74 @@ public class SkyblockUtils
         TeamManager.saveTeam(level.getServer(), team);
 
         player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.home_set", homePosition.toShortString()));
+        return 1;
+    }
+
+    public static int visitIsland(CommandContext<CommandSourceStack> context) throws CommandSyntaxException
+    {
+        ServerPlayer player = context.getSource().getPlayerOrException();
+        String playerName = context.getArgument("player", String.class);
+
+        ServerPlayer target = context.getSource().getServer().getPlayerList().getPlayerByName(playerName);
+
+        if (target == null)
+        {
+            player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.player_not_online", playerName));
+            return 0;
+        }
+
+        Optional<Team> optionalTeam = TeamManager.getAllTeams().stream()
+                .filter(team -> team.getMembers().stream().anyMatch(member -> member.getUuid().equals(target.getUUID())))
+                .findFirst();
+
+        if (optionalTeam.isEmpty())
+        {
+            player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.not_in_team", playerName));
+            return 0;
+        }
+
+        Team team = optionalTeam.get();
+        if (!team.isAllowVisit())
+        {
+            player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.visit_disabled", team.getName()));
+            return 0;
+        }
+
+        BlockPos home = team.getHomePosition();
+        Vec2 homeRotation = team.getHomeRotation();
+
+        if (home == null)
+        {
+            player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.no_home"));
+            return 0;
+        }
+
+        player.teleportTo(context.getSource().getLevel(), home.getX() + 0.5, home.getY() + 1, home.getZ() + 0.5, homeRotation.y, homeRotation.x);
+        player.resetFallDistance();
+        player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.visit_teleport", team.getName()));
+        return 1;
+    }
+
+    public static int setAllowVisit(CommandContext<CommandSourceStack> context) throws CommandSyntaxException
+    {
+        ServerLevel level = context.getSource().getLevel();
+        ServerPlayer player = context.getSource().getPlayerOrException();
+        Optional<Team> optionalTeam = TeamManager.getAllTeams().stream()
+                .filter(team -> team.getLeader().equals(player.getUUID()))
+                .findFirst();
+
+        if (optionalTeam.isEmpty())
+        {
+            player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.not_leader"));
+            return 0;
+        }
+
+        Team team = optionalTeam.get();
+        boolean allowVisit = context.getArgument("allow", Boolean.class);
+        team.setAllowVisit(allowVisit);
+        TeamManager.saveTeam(level.getServer(), team);
+
+        player.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.visit_" + (allowVisit ? "enabled" : "disabled")));
         return 1;
     }
 
@@ -439,6 +558,7 @@ public class SkyblockUtils
     public static int kickPlayer(CommandContext<CommandSourceStack> context) throws CommandSyntaxException
     {
         ServerPlayer leader = context.getSource().getPlayerOrException();
+        ServerLevel level = context.getSource().getLevel();
         String playerName = context.getArgument("player", String.class);
 
         Team team = TeamManager.getTeamByPlayer(leader.getUUID());
@@ -451,13 +571,22 @@ public class SkyblockUtils
 
         ServerPlayer toKick = context.getSource().getServer().getPlayerList().getPlayerByName(playerName);
 
-        if (toKick == null || team.getMembers().stream().noneMatch(member -> member.getUuid().equals(toKick.getUUID())))
+        assert toKick != null;
+        if (team.getLeader() == toKick.getUUID())
+        {
+            leader.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.cannot_kick_leader"));
+            return 0;
+        }
+
+        if (team.getMembers().stream().noneMatch(member -> member.getUuid().equals(toKick.getUUID())))
         {
             leader.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.member_not_found", playerName));
             return 0;
         }
 
         team.removeMember(toKick.getUUID());
+        int[] spawn = parseConfigPosition(HavenConfig.spawnPosition);
+        toKick.teleportTo(level, spawn[0], spawn[1], spawn[2], 0, 0);
         leader.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.kick_success", playerName));
         toKick.sendSystemMessage(Component.translatable("haven_skyblock_builder.team.kicked", team.getName()));
         return 1;
@@ -567,6 +696,25 @@ public class SkyblockUtils
         }
 
         team.removeMember(player.getUUID());
+        if (team.getLeader().equals(player.getUUID()))
+        {
+            if (team.getMembers().isEmpty())
+            {
+                /*if (team.getHomePosition() != null)
+                {
+                    IslandDeleter.deleteIslandArea(level, team.getHomePosition());
+                }*/
+                TeamManager.removeTeam(level.getServer(), team.getUuid());
+                int[] spawn = parseConfigPosition(HavenConfig.spawnPosition);
+                player.teleportTo(level, spawn[0], spawn[1], spawn[2], 0, 0);
+                context.getSource().sendSuccess(() -> Component.translatable("haven_skyblock_builder.team.disband_success", team.getName()), true);
+
+                return 1;
+            }
+
+            team.setLeader(team.getMembers().getFirst().getUuid());
+            context.getSource().sendSuccess(() -> Component.translatable("haven_skyblock_builder.team.leader_change", team.getLeaderName()), true);
+        }
         TeamManager.saveTeam(level.getServer(), team);
 
         context.getSource().sendSuccess(() -> Component.translatable("haven_skyblock_builder.team.member_removed", playerName, teamName), true);
